# nimbus

./: Cargo.toml  Dockerfile  README.md
src/: http_handler.rs  main.rs
templates/: bun.lockb  components.json  entrypoint.tsx  index.html  package.json  tailwind.config.js
