[package]
name = "nimbus"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nimbus"
path = "src/main.rs"

[dependencies]
aws-config = "1.8.0"
aws-sdk-s3 = "1.93.0"
fs_extra = "1.3.0"
lambda_http = "0.13.0"
lambda_runtime = "0.14.2"
serde = "1.0.219"
serde_json = "1.0.140"

tokio = { version = "1", features = ["macros"] }
